View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032060 | Open CASCADE | OCCT:Modeling Algorithms | public | 2021-01-17 12:14 | 2021-08-29 18:21 |
Reporter | nds | Assigned To | szy | ||
Priority | normal | Severity | minor | ||
Status | assigned | Resolution | open | ||
Product Version | 7.5.0 | ||||
Target Version | 7.7.0 | ||||
Summary | 0032060: Modeling Algorithms - HLR presentation does not display expected edges | ||||
Description | Creating HLR presentation with Prs3d_TOH_PolyAlgo type of HLR. Some edges are not visible (see attached image). | ||||
Steps To Reproduce | testreadstep [locate_data_file as1-oc-214-mat.stp] a incmesh a 0.1 vinit vcomputehlr a h 0 0 0 0 0 1 0 1 0 vtop vfit | ||||
Tags | No tags attached. | ||||
Test case number | |||||
Date Modified | Username | Field | Change |
---|---|---|---|
2021-01-17 12:14 | nds | New Issue | |
2021-01-17 12:14 | nds | Assigned To | => nds |
2021-01-17 12:42 | nds | File Added: absent_edge_on_top_view.png | |
2021-01-17 13:41 | kgv | Note Added: 0098172 | |
2021-01-17 13:41 | kgv | Status | new => feedback |
2021-01-17 13:44 | kgv | Category | OCCT:Visualization => OCCT:Modeling Algorithms |
2021-01-17 13:44 | kgv | Summary | HLR presentation does not display expected edges => Modeling Algorithms - HLR presentation does not display expected edges |
2021-08-29 18:19 | msv | Steps to Reproduce Updated | |
2021-08-29 18:20 | msv | Assigned To | nds => szy |
2021-08-29 18:20 | msv | Status | feedback => assigned |
2021-08-29 18:21 | msv | Product Version | => 7.6.0 |
2021-08-29 18:21 | msv | Target Version | 7.6.0 => 7.7.0 |
2021-08-29 18:21 | msv | Product Version | 7.6.0 => 7.5.0 |