0032060: Modeling Algorithms - HLR presentation does not display expected edges